<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#F2F2F2"
        android:orientation="vertical"
        android:padding="24dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:text="@string/add_region"
                android:textSize="@dimen/size_20"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/dialog_add_region_image_cancel"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_alignParentEnd="true"
                android:src="@drawable/ic_close" />

        </RelativeLayout>

        <EditText
            android:id="@+id/dialog_add_region_name"
            android:layout_width="match_parent"
            android:layout_height="42dp"
            android:layout_marginTop="42dp"
            android:background="@drawable/shape_edit_text_bg"
            android:padding="4dp"
            android:textSize="14sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:orientation="horizontal"
            android:weightSum="1">

            <Button
                android:id="@+id/dialog_add_region_cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight=".5"
                android:background="@null"
                android:stateListAnimator="@null"
                android:text="@string/dialog_cancel"
                android:textSize="@dimen/size_14"/>

            <Button
                android:id="@+id/dialog_add_region_commit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight=".5"
                android:background="@drawable/shape_radius_green"
                android:stateListAnimator="@null"
                android:text="@string/dialog_confirm"
                android:textSize="@dimen/size_14"
                android:textColor="@color/white" />

        </LinearLayout>

    </LinearLayout>
</layout>