<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="vm"
            type="com.vcom.smart.uivm.AddSceneVM" />
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background_color">

        <RelativeLayout
            android:id="@+id/rl_add_scene_title"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="24dp"
            android:background="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_default="percent"
            app:layout_constraintHeight_percent=".08"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="75dp"
                android:layout_height="match_parent"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:gravity="center"
                android:onClick="@{()->vm.viewBack()}"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="@dimen/size_24"
                    android:layout_height="match_parent"
                    android:src="@drawable/ic_arrow_back" />
            </LinearLayout>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/bar_scene"
                android:textSize="@dimen/size_20"
                android:textColor="@color/black_33"
                android:textStyle="bold"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="12dp"
                android:gravity="center"
                android:onClick="@{()->vm.goUpdateScene()}"
                android:text="@string/bar_save"
                android:textColor="@color/green"
                android:textSize="@dimen/size_18"
                android:textStyle="bold" />

        </RelativeLayout>

        <LinearLayout
            android:id="@+id/ll_add_scene_name"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="4dp"
            android:background="@color/white"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_default="percent"
            app:layout_constraintHeight_percent=".08"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rl_add_scene_title">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:text="@string/scene_name"
                android:textSize="@dimen/size_17"
                android:textColor="@color/black_33" />

            <EditText
                android:id="@+id/et_add_scene_name"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="12dp"
                android:background="@null"
                android:hint="@string/enter_scene_name"
                android:textSize="@dimen/size_17" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_add_scene_icon"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="4dp"
            android:background="@color/white"
            android:gravity="center"
            android:orientation="horizontal"
            android:onClick="@{()->vm.goSelectSceneIcon()}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_default="percent"
            app:layout_constraintHeight_percent=".08"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ll_add_scene_name">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_weight="1"
                android:text="@string/scene_icon"
                android:textSize="@dimen/size_17"
                android:textColor="@color/black_33" />

            <ImageView
                android:id="@+id/iv_select_scene_icon"
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:background="@drawable/ic_scene_selected_0"/>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:background="@drawable/ic_arrow_more"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_add_scene_timing"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="4dp"
            android:background="@color/white"
            android:gravity="center"
            android:orientation="horizontal"
            android:visibility="gone"
            android:onClick="@{()->vm.goSelectSceneTiming()}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_default="percent"
            app:layout_constraintHeight_percent=".08"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ll_add_scene_icon">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_weight="1"
                android:text="@string/scene_timing"
                android:textSize="@dimen/size_17"
                android:textColor="@color/black_33" />

            <TextView
                android:id="@+id/tv_show_timing"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:text="@string/select_time"
                android:textSize="@dimen/size_17" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:background="@drawable/ic_arrow_more"/>

        </LinearLayout>

        <RelativeLayout
            android:id="@+id/rl_add_scene_add"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="4dp"
            android:background="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_default="percent"
            app:layout_constraintHeight_percent=".072"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ll_add_scene_timing">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="20dp"
                android:gravity="center"
                android:text="@string/add_scene_message"
                android:textSize="@dimen/size_14" />

            <TextView
                android:visibility="visible"
                android:id="@+id/tv_add_scene"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="20dp"
                android:gravity="center"
                android:onClick="@{()->vm.goAddEquipToNewScene()}"
                android:text="@string/add_device"
                android:textColor="@color/green"
                android:textSize="@dimen/size_14"
                android:textStyle="bold" />

            <ProgressBar
                android:id="@+id/pr_loading2"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginEnd="20dp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:src="@drawable/ic_arrow_back"
                android:visibility="gone" />


        </RelativeLayout>

        <com.vcom.smart.widget.SlideRecyclerView
            android:id="@+id/rv_add_scene_device"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="4dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rl_add_scene_add"
            app:layout_constraintVertical_bias="0.0" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>