<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#F2F2F2"
        android:orientation="vertical"
        android:padding="24dp">

        <TextView
            android:id="@+id/dialog_select_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dialog_title_select_timing"
            android:textSize="@dimen/size_20"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.026" />

        <TimePicker
            android:id="@+id/tp_select_time"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="12dp"
            android:timePickerMode="spinner"
            app:layout_constraintHeight_percent="0.6"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/dialog_select_title"
            app:layout_constraintBottom_toTopOf="@id/ll_button_bar"/>

        <LinearLayout
            android:id="@+id/ll_button_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:orientation="horizontal"
            android:weightSum="1"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rv_select_icon_list">


            <Button
                android:id="@+id/bt_select_icon_cancel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".7"
                android:background="@null"
                android:stateListAnimator="@null"
                android:text="@string/dialog_cancel" />

            <Button
                android:id="@+id/bt_select_icon_commit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight=".3"
                android:background="@drawable/shape_radius_green"
                android:stateListAnimator="@null"
                android:text="@string/dialog_confirm"
                android:textColor="@color/white" />

        </LinearLayout>



    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>